--- a/package.json
+++ b/package.json
@@ -10,19 +10,25 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
+    "@rollup/plugin-typescript": "^4.0.0",
+    "@tsconfig/svelte": "^1.0.0",
+    "postcss": "^7.0.32",
+    "postcss-import": "^12.0.1",
+    "postcss-load-config": "^2.1.0",
     "rollup": "^2.3.4",
+    "rollup-plugin-css-only": "^2.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^6.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
     "svelte-check": "^1.0.0",
     "svelte-preprocess": "^4.0.0",
-    "@rollup/plugin-typescript": "^4.0.0",
-    "typescript": "^3.9.3",
     "tslib": "^2.0.0",
-    "@tsconfig/svelte": "^1.0.0"
+    "typescript": "^3.9.3"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0"
+    "node-sass": "^4.14.1",
+    "sirv-cli": "^1.0.0",
+    "village-components": "0.0.23"
   }
 }
