--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "typescript": "^3.9.3"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "node-sass": "^4.14.1",
     "sirv-cli": "^1.0.0",
-    "village-components": "0.0.23"
+    "village-components": "0.0.25"
   }
 }
